--- a/deconfig/zn_m2_immwrt.config
+++ b/deconfig/zn_m2_immwrt.config
@@ -4,7 +4,7 @@ CONFIG_TARGET_qualcommax_ipq60xx=y
 CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_zn_m2=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_zn_m2="ipq-wifi-zn_m2"
+CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_zn_m2=""
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
@@ -20,15 +20,19 @@ CONFIG_BUSYBOX_CONFIG_TELNET=y
 
 # NSS
 CONFIG_IPQ_MEM_PROFILE_256=y
-CONFIG_ATH11K_MEM_PROFILE_512M=y
+CONFIG_ATH11K_MEM_PROFILE_512M=n
 CONFIG_NSS_MEM_PROFILE_HIGH=y
 CONFIG_NSS_FIRMWARE_VERSION_12_2=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
-CONFIG_PACKAGE_kmod-qca-mcs=y
+CONFIG_PACKAGE_kmod-qca-mcs=n
 CONFIG_KERNEL_SKB_RECYCLER=y
 CONFIG_NSS_DRV_WIFI_MESH_ENABLE=n
 CONFIG_PACKAGE_MAC80211_MESH=n
 CONFIG_ATH11K_NSS_MESH_SUPPORT=n
+# 额外禁用 Wi-Fi 相关
+CONFIG_PACKAGE_kmod-ath11k=n
+CONFIG_PACKAGE_ath11k-firmware-ipq60xx=n
+CONFIG_PACKAGE_kmod-mac80211=n
 
 # Proto
 CONFIG_PACKAGE_proto-bonding=y
