--- a/deconfig/zn_m2_libwrt.config
+++ b/deconfig/zn_m2_libwrt.config
@@ -4,7 +4,7 @@ CONFIG_TARGET_qualcommax_ipq60xx=y
 CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_PER_DEVICE_ROOTFS=y
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_zn_m2=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_zn_m2="ipq-wifi-zn_m2"
+CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_zn_m2=""  # 移除 ipq-wifi-zn_m2
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
@@ -20,16 +20,20 @@ CONFIG_BUSYBOX_CONFIG_TELNET=y
 
 # NSS
 CONFIG_IPQ_MEM_PROFILE_256=y
-CONFIG_ATH11K_MEM_PROFILE_512M=y
+CONFIG_ATH11K_MEM_PROFILE_512M=n  # 禁用 ATH11K 内存分配
 CONFIG_NSS_MEM_PROFILE_HIGH=y
 CONFIG_NSS_FIRMWARE_VERSION_12_2=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
-CONFIG_PACKAGE_kmod-qca-mcs=y
+CONFIG_PACKAGE_kmod-qca-mcs=n     # 禁用 Wi-Fi MCS 模块
 CONFIG_KERNEL_SKB_RECYCLER=y
 CONFIG_KERNEL_SKB_RECYCLER_MULTI_CPU=y
 CONFIG_NSS_DRV_WIFI_MESH_ENABLE=n
 CONFIG_PACKAGE_MAC80211_MESH=n
 CONFIG_ATH11K_NSS_MESH_SUPPORT=n
+# 额外禁用 Wi-Fi 相关
+CONFIG_PACKAGE_kmod-ath11k=n
+CONFIG_PACKAGE_ath11k-firmware-ipq60xx=n
+CONFIG_PACKAGE_kmod-mac80211=n
 
 # Proto
 CONFIG_PACKAGE_proto-bonding=y
@@ -44,7 +48,7 @@ CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-nft-queue=y
 CONFIG_PACKAGE_kmod-tls=y
 CONFIG_PACKAGE_kmod-tun=y
-#  USB Support
+# USB Support
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
@@ -57,7 +61,7 @@ CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb2=y
-#  NSS kernel drive
+# NSS kernel drive
 CONFIG_PACKAGE_kmod-qca-nss-drv-igs=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-l2tpv2=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-lag-mgr=y
@@ -83,12 +87,12 @@ CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_usbmuxd=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
-#  Coremark
+# Coremark
 CONFIG_PACKAGE_coremark=y
 CONFIG_COREMARK_OPTIMIZE_O3=y
 CONFIG_COREMARK_ENABLE_MULTITHREADING=y
 CONFIG_COREMARK_NUMBER_OF_THREADS=6
-#  mwan3 dependencies
+# mwan3 dependencies
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
 # Enable Luci App
@@ -110,7 +114,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
 
 # Proxy
-#  Passwall
+# Passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
